namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-restricted-patients-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-restricted-patients-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "HMPPS Restricted Patients"
    cloud-platform.justice.gov.uk/slack-channel: "dps_adjudications"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-restricted-patients-ui.git,https://github.com/ministryofjustice/hmpps-restricted-patients-api.git"
    cloud-platform.justice.gov.uk/team-name: "dps-core"
    cloud-platform.justice.gov.uk/service-area: "Manage Custody"
